--- a/src/HomePage.scss
+++ b/src/HomePage.scss
@@ -39,7 +39,7 @@
 
   &__text1 {
     // height: 86px;
-    font-family: Helvetica;
+    // font-family: Helvetica;
     font-size: 36px;
     font-weight: bold;
     font-stretch: normal;
@@ -53,7 +53,7 @@
   &__text2 {
     width: 561px;
     // height: 64px;
-    font-family: Helvetica;
+    // font-family: Helvetica;
     font-size: 24px;
     font-weight: normal;
     font-stretch: normal;
@@ -70,7 +70,7 @@
   &__input {
     // width: 100%;
     padding-left: 25px;
-    width: 480px;
+    width: 525px;
     height: 75px;
     border-radius: 37.5px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
@@ -95,7 +95,7 @@
   &__parkingnearme {
     width: 176px;
     height: 22px;
-    font-family: Helvetica;
+    // font-family: Helvetica;
     font-size: 18px;
     font-weight: normal;
     font-stretch: normal;
