--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,12 @@
 :root {
   --carrot-color: #fe9625;
-  --header-black-color: #000000;
-  --header-gray-color: #898989;
+  --primary-color: #000000;
+  --secondary-color: #898989;
   --white-color: #ffffff;
   --main-font: Helvetica;
 }
 
 body {
   font-family: var(--main-font);
+  width: 100%;
 }
