Create basic style Login component. Will need to add submit button

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   --carrot-color: #fe9625;
   --primary-color: #000000;
   --secondary-color: #898989;
+  --third-color: #979797;
   --white-color: #ffffff;
   --main-font: Helvetica;
 }
