--- a/src/MapPage/MapPage.scss
+++ b/src/MapPage/MapPage.scss
@@ -13,7 +13,7 @@
 // }
 
 .map__container {
-  display: grid; 
+  display: grid;
   grid-template-columns: 30% 70%;
   height: 100vh;
 }
@@ -127,25 +127,49 @@ a:hover {
 //   align-items: center;
 // }
 
-.marker__listing {
-  width: 0;
-  height: 0;
+.marker__location {
+  // width: 0;
+  // height: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  width: 50px;
-  height: 50px;
-  color: #fff;
-  background: #c50;
+  background-image: url(../images/carrot-marker.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 18px;
+  height: 56px;
+  // color: #fff;
+  // background: #c50;
   // border: solid 2px;
-  border-radius: 0 70% 70%;
-  box-shadow: 0 0 2px #000;
+  // border-radius: 0 70% 70%;
+  // box-shadow: 0 0 2px #000;
   cursor: pointer;
-  transform-origin: 0 0;
-  transform: rotateZ(-135deg);
-} 
+  // transform-origin: 0 0;
+  // transform: rotateZ(-135deg);
+}
 
+.marker__listing {
+  // width: 0;
+  // height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  background-image: url(../images/easter-egg-marker.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 40px;
+  height: 52px;
+  color: #fff;
+  // background: #c50;
+  // border: solid 2px;
+  // border-radius: 0 70% 70%;
+  // box-shadow: 0 0 2px #000;
+  cursor: pointer;
+  // transform-origin: 0 0;
+  // transform: rotateZ(-135deg);
+}
 
 .clearfix {
   display: block;
