Add v1.0 README file

--- a/src/LoginSignUp/Login.scss
+++ b/src/LoginSignUp/Login.scss
@@ -1,6 +1,6 @@
 .login {
-  // display: flex;
-  // justify-content: center;
+  display: flex;
+  justify-content: center;
 
   &__modal {
     width: 660px;
