Implement basic JWT on SignUp component - still troubleshooting `foreach` error

--- a/src/LoginSignUp/Login.scss
+++ b/src/LoginSignUp/Login.scss
@@ -42,7 +42,7 @@
   &__header {
     // margin-left: 60px;
     // margin-right: 60px;
-    width: 117px;
+    // width: 117px;
     height: 47px;
     font-family: Helvetica;
     font-size: 39px;
