--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   --secondary-color: #898989;
   --third-color: #979797;
   --white-color: #ffffff;
+  --almost-black: #252525;
   --main-font: Helvetica;
 }
 
