--- a/src/MapPage/MapPage.scss
+++ b/src/MapPage/MapPage.scss
@@ -85,14 +85,14 @@
 //   padding: 20px 2px;
 // }
 
-a {
-  color: #404040;
-  text-decoration: none;
-}
+// a {
+//   color: #404040;
+//   text-decoration: none;
+// }
 
-a:hover {
-  color: #101010;
-}
+// a:hover {
+//   color: #101010;
+// }
 
 ::-webkit-scrollbar {
   width: 3px;
