MapPage - added displayStores state. Troubleshooting why re-render does not render filtered listings

--- a/src/MapPage/Filter.scss
+++ b/src/MapPage/Filter.scss
@@ -31,7 +31,11 @@
 
   &__HourlySearchBtn {
     // display: inherit;
-    margin-left: 3rem;
-
+    // margin-left: 3rem;
+    width: 81px;
+    height: 75px;
+    border-radius: 37.5px;
+    color: white;
+    background-color: #000000;
   }
 }
