--- a/src/MapPage/MapPage.scss
+++ b/src/MapPage/MapPage.scss
@@ -47,7 +47,7 @@
   &__listings .item {
     display: block;
     border-bottom: 1px solid #eee;
-    padding: 10px;
+    padding: 2rem;
     text-decoration: none;
   }
 
