--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -1,16 +1,20 @@
 .nav {
   display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 9999;
+  // z-index: 9999;
   width: 100%;
-  background-color: lightgray;
+  // height: 125px;
   align-items: center;
   background-color: transparent;
-  height: 110px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   // margin-left: 15px;
   // margin-right: 15px;
+
+  &__navHomePagePosition {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
   &__item {
     text-decoration: none;
@@ -18,6 +22,20 @@
 
   &__item--right {
     margin-right: 100px;
+  }
+
+  &__HomePageLogoColor {
+    color: var(--white-color);
+    &:hover {
+      color: var(--primary-color);
+    }
+  }
+
+  &__MapPageLogoColor {
+    color: var(--primary-color);
+    &:hover {
+      color: var(--primary-color);
+    }
   }
 
   &__logo {
@@ -33,13 +51,13 @@
     line-height: normal;
     letter-spacing: normal;
     text-align: center;
-    color: var(--white-color);
   }
 
-  &__logo:hover, &__login:hover, &__signup:hover {
+  &__login:hover,
+  &__signup:hover {
     color: var(--primary-color);
   }
-  
+
   &__login {
     color: var(--carrot-color);
     height: 31px;
@@ -51,7 +69,6 @@
     line-height: normal;
     letter-spacing: normal;
   }
-
 
   &__signup {
     display: flex;
@@ -70,6 +87,4 @@
     line-height: normal;
     letter-spacing: normal;
   }
-
-
 }
