--- a/src/SearchBtn/SearchBtn.scss
+++ b/src/SearchBtn/SearchBtn.scss
@@ -1,19 +1,15 @@
-.search-btn {
-  &__input {
+.SearchBtn {
+  &__Input {
     // width: 561px;
     height: 60px;
     border-radius: 37.5px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
     border: solid 1px var(--very-light-pink);
     // background-color: #ffffff;
-
   }
-
-
-
 }
 
+// DEFAUT FROM AlgoliaPlaces
 .ap-input {
   padding-left: 20px;
-
 }
