Revise font size and margin in Navbar and MagPage

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   --third-color: #979797;
   --white-color: #ffffff;
   --almost-black: #252525;
+  --watermelon-color: #26c1ca;
   --main-font: Helvetica;
 }
 
