--- a/src/MapPage/ListingCard.scss
+++ b/src/MapPage/ListingCard.scss
@@ -65,8 +65,8 @@
   }
 
   &__ParkingTypeGarage {
-    border: 1px solid blue;
-    color: blue;
+    border: 1px solid var(--watermelon-color);
+    color: var(--watermelon-color);
   }
 
   &__ParkingTypeValet {
