--- a/src/MapPage/Filter.scss
+++ b/src/MapPage/Filter.scss
@@ -3,7 +3,7 @@
   align-items: center;
   // justify-content: center;
   // height: 150px;
-  margin: 0 1rem 2rem 1rem;
+  margin: 0 1rem 2rem 6rem;
   font-size: 1rem;
 
   // &__SearchBtn {
@@ -65,7 +65,7 @@
   }
 }
 
-.SearchBtn {
-  width: 500px;
-  margin-left: 2rem;
-}
+// .SearchBtn {
+  // width: 500px;
+  // margin-left: 2rem;
+// }
