--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -6,9 +6,7 @@
   align-items: center;
   background-color: transparent;
   margin-top: 2rem;
-  margin-bottom: 1rem;
-  // margin-left: 15px;
-  // margin-right: 15px;
+  margin-bottom: 2rem;
 
   &__navHomePagePosition {
     position: absolute;
@@ -41,15 +39,8 @@
   &__logo {
     margin-right: auto;
     margin-left: 100px;
-    // width: 258px;
     height: 47px;
-    // font-family: Helvetica;
-    font-size: 39px;
-    // font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
+    font-size: 2.5rem;
     text-align: center;
   }
 
@@ -62,29 +53,19 @@
     color: var(--carrot-color);
     height: 31px;
     // font-family: Helvetica;
-    font-size: 26px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
+    font-size: 1.25rem;
   }
 
   &__signup {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 162px;
-    height: 57px;
+    width: 8rem;
+    height: 3rem;
     border-radius: 28.5px;
     background-color: var(--carrot-color);
     color: white;
     // font-family: Helvetica;
-    font-size: 26px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
+    font-size: 1.25rem;
   }
 }
