--- a/src/MapPage/Filter.scss
+++ b/src/MapPage/Filter.scss
@@ -22,10 +22,15 @@
     border-radius: 37.5px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
     border: solid 1px var(--very-light-pink);
-    background-color: white;
+    background-color: var(--white-color);
     // &:hover {
     //   color: orange;
     // }
+  }
+
+  &__HourlyOnClick--isActive, &__MonthlyOnClick--isActive {
+    color: var(--white-color);
+    background-color: var(--primary-color);
   }
 
   // &__MonthlyOnClick {
@@ -43,7 +48,6 @@
   &__HourlyText {
     margin-right: 1rem;
     font-weight: bold;
-
   }
 
   &__HourlyTo,
@@ -56,16 +60,16 @@
   &__HourlySearchBtn {
     // display: inherit;
     // margin-left: 3rem;
-    width: 81px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
     border-radius: 37.5px;
-    color: white;
+    color: var(--white-color);
     background-color: var(--primary-color);
     margin-left: 2rem;
   }
 }
 
 // .SearchBtn {
-  // width: 500px;
-  // margin-left: 2rem;
+// width: 500px;
+// margin-left: 2rem;
 // }
