--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   --primary-color: #000000;
   --secondary-color: #898989;
   --third-color: #979797;
+  --light-grey: #dfdfdf;
   --white-color: #ffffff;
   --almost-black: #252525;
   --watermelon-color: #26c1ca;
