Style FilterMonthly component

--- a/src/MapPage/Filter.scss
+++ b/src/MapPage/Filter.scss
@@ -67,9 +67,9 @@
     background-color: var(--primary-color);
     margin-left: 2rem;
   }
+
+  &__Monthly {
+    margin-left: 2rem;
+  }
 }
 
-// .SearchBtn {
-// width: 500px;
-// margin-left: 2rem;
-// }
