Implement parking features icons in ListingInfo component

--- a/src/MapPage/ListingInfo.scss
+++ b/src/MapPage/ListingInfo.scss
@@ -45,8 +45,15 @@
     margin: 2rem 1rem;
   }
 
+  &__ParkingFreatureList {
+    padding-left: 0;
+  }
+
+  &__ParkingFeatureItem {
+    list-style: none;
+  }
+
   &__Reviews {
     margin: 2rem 1rem;
-
   }
 }
