--- a/src/CheckoutPage/DriverInformation.scss
+++ b/src/CheckoutPage/DriverInformation.scss
@@ -6,28 +6,56 @@
     grid-column-gap: 1rem;
   }
 
+  &__Header {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  
+
   &__Form {
-    padding: 4rem;
+    padding: 50px;
     border-radius: 2px;
-    height: 600px;
+    // height: 600px;
     box-shadow: 0 4px 14px 0 rgba(191, 191, 191, 0.5);
   }
 
-  &__FormVehicleInfoInput,
-  &__FormDriverNameInput {
-    width: 100%;
+  &__FormHeader {
+    font-size: 1rem;
+    color: var(--almost-black);
   }
 
-  &__FormDriverInfo, &__FormCarInfo {
+  &__FormLabel {
+    color: var(--secondary-color);
+    &:before {
+      color: var(--carrot-color);
+      content: '* ';
+    }
+  }
+
+  &__FormInput {
+    margin-top: 0.5rem;
+    width: 100%;
+    height: 40px;
+    border-radius: 3px;
+    border: solid 1px var(--light-grey);
+    &:focus {
+      border: 2px solid var(--carrot-color);
+    }
+  }
+
+  &__TwoColumns {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
   }
 
-  &__FormDriverLicenseInput,
-  &__FormDriverContactNumInput,
-  &__FormCarMakeInput,
-  &__FormYearInput {
-    width: 100%;
+  &__FormError {
+    margin-top: 0.5rem;
+    color: red;
   }
+}
+
+legend {
+  border-bottom: 1px solid #d9d9d9;
 }
