--- a/src/LoginSignUp/LoginSignup.scss
+++ b/src/LoginSignUp/LoginSignup.scss
@@ -1,3 +1,16 @@
+.LoginSignup {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  // background-color: green;
+
+  &__Panel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .login {
   display: flex;
   justify-content: center;
@@ -5,7 +18,7 @@
   // background-position: center;
 
   &__modal {
-    width: 550px;
+    width: 525px;
     // height: 850px;
     // border-radius: 50px;
     box-shadow: -5px 5px 31px -2px rgba(189, 189, 189, 0.5);
@@ -22,6 +35,11 @@
     margin: 0 50px;
   }
 
+  &__twocolumns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem;
+  }
   &__form-label {
     font-size: inherit;
     color: var(--secondary-color);
