--- a/src/CheckoutPage/ListingConfirmation.scss
+++ b/src/CheckoutPage/ListingConfirmation.scss
@@ -2,19 +2,24 @@
   // background-color: green;
   border-radius: 2px;
   //   width: 100%;
-  height: 522px;
+  // height: 522px;
   box-shadow: 0 4px 14px 0 rgba(191, 191, 191, 0.5);
+  color: var(--almost-black);
 
   &__ListingImg {
     width: 100%;
   }
 
   &__ChangeSpotLink {
-    color: var(--almost-black);
+    color: var(--carrot-color);
+    text-decoration: underline;
+    text-align: center;
+    &:hover {
+      color: var(--almost-black);
+    }
   }
 
   &__Address {
-    color: var(--almost-black);
   }
 
   &__Divider {
@@ -30,7 +35,6 @@
 
   &__TotalText,
   &__TotalCost {
-    color: var(--almost-black);
     font-weight: bold;
   }
 
@@ -43,6 +47,6 @@
 
   &__Details,
   &__SpotPriceAndTotal {
-    margin: 3rem;
+    padding: 2rem;
   }
 }
