--- a/src/CheckoutPage/CheckoutFooter.scss
+++ b/src/CheckoutPage/CheckoutFooter.scss
@@ -5,12 +5,22 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  
+
   &__Left {
     margin-left: 100px;
   }
-  
+
   &__Right {
     margin-right: 100px;
+  }
+
+  &__List {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+  }
+
+  &__ListItem {
+    margin-right: 2rem;
   }
 }
