--- a/src/LoginSignUp/LoginSignup.scss
+++ b/src/LoginSignUp/LoginSignup.scss
@@ -23,6 +23,7 @@
     // border-radius: 50px;
     box-shadow: -5px 5px 31px -2px rgba(189, 189, 189, 0.5);
     background-color: #ffffff;
+    margin-top: 4rem;
   }
 
   &__container {
