--- a/src/MapPage/MapPage.scss
+++ b/src/MapPage/MapPage.scss
@@ -144,8 +144,8 @@
   background-image: url(../assets/images/carrot-marker.png);
   background-repeat: no-repeat;
   background-position: center center;
-  width: 18px;
-  height: 56px;
+  width: 100%;
+  height: 100%;
   // color: #fff;
   // background: #c50;
   // border: solid 2px;
@@ -163,11 +163,11 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  background-image: url(../assets/images/easter-egg-marker.png);
+  background-image: url(../assets/images/garage-marker.png);
   background-repeat: no-repeat;
   background-position: center center;
-  width: 40px;
-  height: 52px;
+  width: 100%;
+  height: 100%;
   color: #fff;
   // background: #c50;
   // border: solid 2px;
