Add colored easter eggs

--- a/src/MapPage/ListingCard.scss
+++ b/src/MapPage/ListingCard.scss
@@ -102,8 +102,8 @@
   }
 
   &__ParkingTypeLot {
-    border: 1px solid purple;
-    color: purple;
+    border: 1px solid #7d287e;
+    color: #7d287e;
   }
 
   &__ParkingTypeGarage {
@@ -112,12 +112,12 @@
   }
 
   &__ParkingTypeValet {
-    border: 1px solid green;
-    color: green;
+    border: 1px solid #0c8040;
+    color: #0c8040;
   }
 
   &__ParkingTypeResident {
-    border: 1px solid orange;
-    color: orange;
+    border: 1px solid #f08094;
+    color: #f08094;
   }
 }
