--- a/src/MapPage/MapPage.scss
+++ b/src/MapPage/MapPage.scss
@@ -160,6 +160,7 @@
   background-position: center center;
   width: 100%;
   height: 100%;
+  z-index: 10;
   // color: #fff;
   // background: #c50;
   // border: solid 2px;
